syntax = "proto3";

package event;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

service Events {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
  rpc UpdateEvent(UpdateEventRequest) returns (google.protobuf.Empty) {}
  rpc DeleteEvent(DeleteEventRequest) returns(google.protobuf.Empty) {}
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {}
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_at = 3;
  google.protobuf.Timestamp end_at = 4;
  string description = 5;
  string owner_id = 6;
  google.protobuf.Duration notify_before = 7;
}

message CreateEventRequest {
  Event event = 1;
}
message CreateEventResponse {
  string event_id = 1;
}
message UpdateEventRequest {
  string event_id = 1;
  Event event = 2;
}
message DeleteEventRequest{
  string event_id = 1;
}
message GetEventsRequest{
  string owner_id = 1;
  google.protobuf.Timestamp start_at = 2;
  google.protobuf.Timestamp end_at = 3;
}
message GetEventsResponse{
  repeated Event events = 1;
}